--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,13 +18,25 @@
   <body>
     <header class="page-header" role="banner">
       <h2>Templates and Atlases</h2>
+      <h3><a href="hcp_trk_atlas.html">HCP Tractography Atlas</a></h3>
+      <h3><a href="hcp_template.html">HCP Template</a></h3>
       <br>
-      <h2>Subject Data</h2>
-      <h3><a href="">HCP</a></h3>
+      <h2>Subject Data (In-Vivo)</h2>
+      <h3><a href="hcp_ya.html">HCP 1065 Young Adult</a></h3>
+      <h3><a href="hcp_d.html">HCP 636 Developmental Sujbects</a></h3>
+      <h3><a href="mgh_760.html">MGH Single Subject</a></h3>
+      <h3><a href="ntu_dsi.html">NTU 90 Subjects</a></h3>
+      <h3><a href="test_retest.html">Test-Retest Data</a></h3>
+      
+      
+      <br>
+      <h2>Subject Data (Ex-Vivo)</h2>
+      <h3><a href="duke_civm_brainstem.html">Duke Human Brainstem</a></h3>
+      <h3><a href="histology.html">Histology Data</a></h3>
+      <h3><a href="indi_prime.html">PRIME-DE Nonhuman Primate</a></h3>   
       <br>
       <h2>User Support</h2>
       <h3><a href="https://groups.google.com/g/dsi-studio?pli=1">Discussion Forum</a></h3>
-      <br>
       <br>
       <p>Fang-Cheng (Frank) Yeh<br>
           <a href="https://www.dropbox.com/s/195wrucikb17gcc/Frank_CV.pdf?dl=0">CV</a>,<a href="http://scholar.google.com/citations?user=QdfsoJ4AAAAJ&hl=en">Google Citation</a>,<a href="https://publons.com/author/1228438/fang-cheng-yeh#profile">Publons Profile</a><br>
