--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <header class="page-header" role="banner">
+      <img src="/images/customLogo.png" width="250">
       <h2>Templates and Atlases</h2>
       <h3><a href="hcp_trk_atlas.html">HCP Tractography Atlas</a></h3>
       <h3><a href="hcp_template.html">HCP Template</a></h3>
