--- a/_includes/google_network_domain.html
+++ b/_includes/google_network_domain.html
@@ -1,9 +1,9 @@
 <script>
-function getIP4(json) {
+ function getIP3(json) {
    if (json) {
    	EIPL=json;
    }
-   if (EIPL.ipType === 'Business' || EIPL.ipType === 'Education') {
+   if (EIPL.org) {
    	if (typeof ga === 'function' && typeof ga.getAll === 'function') {
 		var org=''+EIPL.org;
                 if (EIPL.businessName) {
@@ -15,15 +15,15 @@ function getIP4(json) {
 		ga(ga.getAll()[0].get('name')+'.send', {
 		  hitType: 'event',
 		  eventCategory: 'eXTReMe-IP-Lookup.com',
-		  eventAction: EIPL.ipType, // sends Business, Education as type of visitor
-		  eventLabel: org, // sends the Business/Education name and if available the domain of the Business/Education
+		  eventAction: EIPL.ipType, // sends Business, Education or Residential as type of visitor
+		  eventLabel: org, // sends Service Provider if Residential or the Business/Education name and if available the domain of the Business/Education
 		  nonInteraction: true
 		});
 	}
 	else {
-		setTimeout(function() {getIP4();}, 200);
+		setTimeout(function() {getIP3();}, 200);
 	}
    }
  }
 </script>
-<script src="//extreme-ip-lookup.com/json/?callback=getIP4&key=Y90wrEtWSxDVmGtTVDJi" async defer></script>
+<script src="//extreme-ip-lookup.com/json/?callback=getIP3&key=Y90wrEtWSxDVmGtTVDJi" async defer></script>
