--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,11 @@
       <h3><a href="hcp_template.html">HCP Template</a></h3>
       <br>
       <h2>Individual Data (In-Vivo)</h2>
-      <h3><a href="hcp_ya.html">HCP 1065 Young Adult</a></h3>
-      <h3><a href="hcp_d.html">HCP 636 Developmental Sujbects</a></h3>
+      <h3><a href="hcp_ya.html">HCP 1065 Young Adult (HCP-YA)</a></h3>
+      <h3><a href="hcp_a.html">HCP 720 Aging Sujbects (HCP-A)</a></h3>
+      <h3><a href="hcp_d.html">HCP 636 Developmental Sujbects (HCP-D)</a></h3>
+      <h3><a href="hcp_d2.html">HCP 758 Developmental Sujbects (dHCP)</a></h3>
+      <br>
       <h3><a href="mgh_760.html">MGH Single Subject</a></h3>
       <h3><a href="ntu_dsi.html">NTU 90 Subjects</a></h3>
       <h3><a href="test_retest.html">Test-Retest Data</a></h3>
