--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
       <h2>Individual Data (In-Vivo)</h2>
       <h3><a href="hcp_ya.html">HCP 1065 Young Adult (HCP-YA)</a></h3>
       <h3><a href="hcp_a.html">HCP 720 Aging Sujbects (HCP-A)</a></h3>
-      <h3><a href="hcp_d.html">HCP 636 Developmental Sujbects (HCP-D)</a></h3>
-      <h3><a href="hcp_d2.html">HCP 758 Developmental Sujbects (dHCP)</a></h3>
+      <h3><a href="hcp_d.html">HCP 636 Developmental Subjects (HCP-D)</a></h3>
+      <h3><a href="hcp_d2.html">HCP 758 Developmental Subjects (dHCP)</a></h3>
       <br>
       <h3><a href="camcan.html">Cam-CAN 634 Subjects</a></h3>
       <h3><a href="ntu_dsi.html">NTU 90 Subjects</a></h3>
