--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
       <img src="/images/customLogo.png" width="250">
       <h2>Templates and Atlases</h2>
       <h3><a href="hcp_trk_atlas.html">HCP Tractography Atlas</a></h3>
-      <h3><a href="hcp_template.html">HCP Template</a></h3>
+      <h3><a href="hcp_template.html">HCP dMRI Template</a></h3>
       <br>
       <h2>Individual Data (In-Vivo)</h2>
       <h3><a href="hcp_ya.html">HCP 1065 Young Adult (HCP-YA)</a></h3>
