--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
       <br>
       <h2>Individual Data (In-Vivo)</h2>
       <h3><a href="hcp_ya.html">HCP 1065 Young Adult (HCP-YA)</a></h3>
-      <h3><a href="hcp_a.html">HCP 720 Aging Sujbects (HCP-A)</a></h3>
+      <h3><a href="hcp_a.html">HCP 720 Aging Subjects (HCP-A)</a></h3>
       <h3><a href="hcp_d.html">HCP 636 Developmental Subjects (HCP-D)</a></h3>
       <h3><a href="hcp_d2.html">HCP 758 Developmental Subjects (dHCP)</a></h3>
       <br>
