--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,13 +23,13 @@
       <h3><a href="hcp_template.html">HCP dMRI Template</a></h3>
       <br>
       <h2>Individual Data (In-Vivo)</h2>
-      <h3><a href="hcp_ya.html">HCP 1065 Young Adult (HCP-YA)</a></h3>
-      <h3><a href="hcp_a.html">HCP 720 Aging Subjects (HCP-A)</a></h3>
-      <h3><a href="hcp_d.html">HCP 636 Developmental Subjects (HCP-D)</a></h3>
-      <h3><a href="hcp_d2.html">HCP 758 Developmental Subjects (dHCP)</a></h3>
+      <h3><a href="hcp_ya.html">HCP Young Adult n=1065</a></h3>
+      <h3><a href="hcp_a.html">HCP Aging n=720</a></h3>
+      <h3><a href="hcp_d.html">HCP Developmental n=636</a></h3>
+      <h3><a href="hcp_d2.html">Developmental HCP n=758</a></h3>
       <br>
-      <h3><a href="camcan.html">Cam-CAN 634 Subjects</a></h3>
-      <h3><a href="ntu_dsi.html">NTU 90 Subjects</a></h3>
+      <h3><a href="camcan.html">Cam-CAN n=634</a></h3>
+      <h3><a href="ntu_dsi.html">NTU n=90</a></h3>
       <h3><a href="mgh_760.html">MGH Single Subject</a></h3>
       <h3><a href="test_retest.html">Test-Retest Data</a></h3>
       <br>
