--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
       <h3><a href="hcp_ya.html">HCP Young Adult n=1065</a></h3>
       <h3><a href="hcp_a.html">HCP Aging n=720</a></h3>
       <h3><a href="hcp_d.html">HCP Developmental n=636</a></h3>
-      <h3><a href="hcp_d2.html">Developmental HCP n=758</a></h3>
+      <h3><a href="hcp_d2.html">Developing HCP n=758</a></h3>
       <br>
       <h3><a href="camcan.html">Cam-CAN n=634</a></h3>
       <h3><a href="ntu_dsi.html">NTU n=90</a></h3>
