--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,13 +23,13 @@
       <h3><a href="hcp_template.html">HCP dMRI Template</a></h3>
       <br>
       <h2>Individual Data (In-Vivo)</h2>
-      <h3><a href="hcp_ya.html">HCP Young Adult n=1065</a></h3>
-      <h3><a href="hcp_a.html">HCP Aging n=720</a></h3>
-      <h3><a href="hcp_d.html">HCP Developmental n=636</a></h3>
-      <h3><a href="hcp_d2.html">Developing HCP n=758</a></h3>
+      <h3><a href="hcp_ya.html">HCP Young Adult (n=1065)</a></h3>
+      <h3><a href="hcp_a.html">HCP Aging (n=720)</a></h3>
+      <h3><a href="hcp_d.html">HCP Developmental (n=636)</a></h3>
+      <h3><a href="hcp_d2.html">Developing HCP (n=758)</a></h3>
       <br>
-      <h3><a href="camcan.html">Cam-CAN n=634</a></h3>
-      <h3><a href="ntu_dsi.html">NTU n=90</a></h3>
+      <h3><a href="camcan.html">Cam-CAN (n=634)</a></h3>
+      <h3><a href="ntu_dsi.html">NTU (n=90)</a></h3>
       <h3><a href="mgh_760.html">MGH Single Subject</a></h3>
       <h3><a href="test_retest.html">Test-Retest Data</a></h3>
       <br>
