--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,20 +18,20 @@
   <body>
     <header class="page-header" role="banner">
       <img src="/images/customLogo.png" width="250">
-      <h2>Templates and Atlases</h2>
-      <h3><a href="/hcp_trk_atlas.html">HCP Tractography Atlas</a></h3>
-      <h3><a href="/hcp_template.html">HCP dMRI Template</a></h3>
+      <h3>Templates and Atlases</h3>
+      <h4><a href="/hcp_trk_atlas.html">HCP Tractography Atlas</a></h4>
+      <h4><a href="/hcp_template.html">HCP dMRI Template (HCP1065)</a></h4>
       <br>
-      <h2>Individual Data (In-Vivo)</h2>
-      <h3><a href="/hcp_ya.html">HCP Young Adult (n=1065)</a></h3>
-      <h3><a href="/hcp_a.html">HCP Aging (n=720)</a></h3>
-      <h3><a href="/hcp_d.html">HCP Developmental (n=636)</a></h3>
-      <h3><a href="/hcp_d2.html">Developing HCP (n=758)</a></h3>
+      <h3>Individual Data (In-Vivo)</h4>
+      <h4><a href="/hcp_ya.html">HCP Young Adult (n=1065)</a></h4>
+      <h4><a href="/hcp_a.html">HCP Aging (n=720)</a></h4>
+      <h4><a href="/hcp_d.html">HCP Developmental (n=636)</a></h4>
+      <h4><a href="/hcp_d2.html">Developing HCP (n=758)</a></h4>
       <br>
-      <h3><a href="/camcan.html">Cam-CAN (n=634)</a></h3>
-      <h3><a href="/ntu_dsi.html">NTU (n=90)</a></h3>
-      <h3><a href="/mgh_760.html">MGH Single Subject</a></h3>
-      <h3><a href="/test_retest.html">Test-Retest Data</a></h3>
+      <h4><a href="/camcan.html">Cam-CAN (n=634)</a></h4>
+      <h4><a href="/ntu_dsi.html">NTU (n=90)</a></h4>
+      <h4><a href="/mgh_760.html">MGH Single Subject</a></h4>
+      <h4><a href="/test_retest.html">Test-Retest Data</a></h4>
       <br>
       <h2>Individual Data (Ex-Vivo)</h2>
       <h3><a href="/duke_civm_brainstem.html">Duke Human Brainstem</a></h3>
