--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
       <h4><a href="/hcp_trk_atlas.html">HCP Tractography Atlas</a></h4>
       <h4><a href="/hcp_template.html">HCP dMRI Template (HCP1065)</a></h4>
       <br>
-      <h3>Individual Data (In-Vivo)</h4>
+      <h3>Individual Data (In-Vivo)</h3>
       <h4><a href="/hcp_ya.html">HCP Young Adult (n=1065)</a></h4>
       <h4><a href="/hcp_a.html">HCP Aging (n=720)</a></h4>
       <h4><a href="/hcp_d.html">HCP Developmental (n=636)</a></h4>
@@ -33,13 +33,14 @@
       <h4><a href="/mgh_760.html">MGH Single Subject</a></h4>
       <h4><a href="/test_retest.html">Test-Retest Data</a></h4>
       <br>
-      <h2>Individual Data (Ex-Vivo)</h2>
-      <h3><a href="/duke_civm_brainstem.html">Duke Human Brainstem</a></h3>
-      <h3><a href="/histology.html">Histology Data</a></h3>
-      <h3><a href="/indi_prime.html">PRIME-DE Nonhuman Primate</a></h3>   
+      <h3>Individual Data (Ex-Vivo)</h3>
+      <h4><a href="/duke_civm_brainstem.html">Duke Human Brainstem</a></h4>
+      <h4><a href="/histology.html">Histology Data</a></h4>
+      <h4><a href="/indi_prime.html">PRIME-DE Nonhuman Primate</a></h4>   
       <br>
-      <h2>User Supports</h2>
-      <h3><a href="https://groups.google.com/g/dsi-studio?pli=1">Discussion Forum</a></h3>
+      <h4><a href="https://dsi-studio.labsolver.org">DSI Studio</a></h4>   
+      <h3>User Supports</h3>
+      <h4><a href="https://groups.google.com/g/dsi-studio?pli=1">Discussion Forum</a></h4>
       <br>
       <p>Fang-Cheng (Frank) Yeh<br>
           <a href="https://www.dropbox.com/s/195wrucikb17gcc/Frank_CV.pdf?dl=0">CV</a>,<a href="http://scholar.google.com/citations?user=QdfsoJ4AAAAJ&hl=en">Google Citation</a>,<a href="https://publons.com/author/1228438/fang-cheng-yeh#profile">Publons Profile</a><br>
