--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,8 @@
     <header class="page-header" role="banner">
       <img src="/images/customLogo.png" width="250">
       <h3>Templates and Atlases</h3>
-      <h4><a href="/hcp_trk_atlas.html">HCP Tractography Atlases</a></h4>
-      <h5>  expert-vetted tract trajectories</h5>
-      <h4><a href="/hcp_template.html">HCP dMRI Templates</a></h4>
-      <h5>  group-averaged voxel metrics</h5>
+      <h4><a href="/hcp_trk_atlas.html">Tractography Atlases</a></h4>
+      <h4><a href="/hcp_template.html">Group-Average Templates</a></h4>
       <h3>Individual Data (In-Vivo)</h3>
       <h4><a href="/hcp_ya.html">HCP Young Adult (n=1065)</a></h4>
       <h4><a href="/hcp_a.html">HCP Aging (n=720)</a></h4>
