--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
       <h4><a href="/hcp_ya.html">HCP Young Adult (n=1065)</a></h4>
       <h4><a href="/hcp_a.html">HCP Aging (n=720)</a></h4>
       <h4><a href="/hcp_d.html">HCP Developmental (n=636)</a></h4>
-      <h4><a href="/hcp_d2.html">Developing HCP (n=758)</a></h4>
+      <h4><a href="/hcp_d2.html">Developing HCP (Neonate n=724)</a></h4>
       <h4><a href="/camcan.html">Cam-CAN (n=634)</a></h4>
       <h4><a href="/ntu_dsi.html">NTU (n=90)</a></h4>
       <h4><a href="/mgh_760.html">MGH Single Subject</a></h4>
