--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,8 @@
   <body>
     <header class="page-header" role="banner">
       <img src="/images/customLogo.png" width="250">
-      <h3>Templates and Atlases</h3>
-      <h4><a href="/hcp_trk_atlas.html">Tractography Atlases</a></h4>
+      <h3>Templates, Atlases, Connectome</h3>
+      <h4><a href="/hcp_trk_atlas.html">Tractography Atlases & Connectome</a></h4>
       <h4><a href="/hcp_template.html">Group-Average Templates</a></h4>
       <h3>Individual Data (In-Vivo)</h3>
       <h4><a href="/hcp_ya.html">HCP Young Adult (n=1065)</a></h4>
