--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,12 +21,15 @@
       <h3>Templates, Atlases, Connectome</h3>
       <h4><a href="/hcp_trk_atlas.html">Tractography Atlases & Connectome</a></h4>
       <h4><a href="/hcp_template.html">Group-Average Templates</a></h4>
-      <h3>Individual Data (In-Vivo)</h3>
+      <h3>Individual Data (HCP data)</h3>
       <h4><a href="/hcp_ya.html">HCP Young Adult (n=1065)</a></h4>
       <h4><a href="/hcp_a.html">HCP Aging (n=720)</a></h4>
       <h4><a href="/hcp_d.html">HCP Developmental (n=636)</a></h4>
       <h4><a href="/hcp_d2.html">Developing HCP (Neonate n=724)</a></h4>
+      <h4>Baby HCP (pending)</a></h4>
+      <h3>Individual Data (In-Vivo)</h3>
       <h4><a href="/camcan.html">Cam-CAN (n=634)</a></h4>
+      <h4><a href="/greesland_twin.html">Queensland Twin Adolescent Brain (QTAB)(n=415)</a></h4>
       <h4><a href="/ntu_dsi.html">NTU (n=90)</a></h4>
       <h4><a href="/mgh_760.html">MGH Single Subject</a></h4>
       <h4><a href="/test_retest.html">Test-Retest Data</a></h4>
