--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
       <h4><a href="/test_retest.html">Test-Retest Data</a></h4>
       <h3>Individual Data (Ex-Vivo)</h3>
       <h4><a href="/duke_civm_brainstem.html">Duke Human Brainstem</a></h4>
-      <h4><a href="/histology.html">Histology Data</a></h4>
+      <h4><a href="/histology.html">Human Histology Images</a></h4>
       <h4><a href="/indi_prime.html">PRIME-DE Nonhuman Primate</a></h4>   
       <h3><a href="https://dsi-studio.labsolver.org">DSI Studio</a></h3>   
       <h3>User Supports</h3>
