--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,10 +22,7 @@
       <h4><a href="/hcp_trk_atlas.html">Tractography Atlases & Connectome</a></h4>
       <h4><a href="/hcp_template.html">Group-Average Templates</a></h4>
       <h3>Individual dMRI (HCP)</h3>
-      <h4><a href="/hcp_ya.html">HCP Young Adult (n=1065)</a></h4>
-      <h4><a href="/hcp_a.html">HCP Aging (n=720)</a></h4>
-      <h4><a href="/hcp_d.html">HCP Developmental (n=636)</a></h4>
-      <h4><a href="/hcp_d2.html">Developing HCP (Neonate n=724)</a></h4>
+      <h4><a href="/hcp_ya.html">Young Adult(n=1065)</a>,<a href="/hcp_a.html">Aging(n=720)</a>,<a href="/hcp_d.html">Developmental(n=636)</a>,<a href="/hcp_d2.html">Developing(Neonate n=724)</a></h4>
       <h4>Baby HCP (pending)</a></h4>
       <h3>Individual dMRI (In-Vivo)</h3>
       <h4><a href="/camcan.html">Cam-CAN (n=634)</a></h4>
@@ -38,6 +35,8 @@
       <h4><a href="/histology.html">Human Histology Images</a></h4>
       <h4><a href="/indi_prime.html">PRIME-DE Nonhuman Primate</a></h4>   
       <h3><a href="https://dsi-studio.labsolver.org">DSI Studio</a></h3>   
+      <h3>Individual dMRI (Patient)</h3>
+      <h4><a href="/upenn_gbm.html">UPenn GBM (n=531)</a></h4>
       <h3>User Supports</h3>
       <h4><a href="https://groups.google.com/g/dsi-studio?pli=1">Discussion Forum</a></h4>
       <p>Fang-Cheng (Frank) Yeh<br>
