--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,7 @@
       <h4><a href="/hcp_trk_atlas.html">Tractography Atlases & Connectome</a></h4>
       <h4><a href="/hcp_template.html">Group-Average Templates</a></h4>
       <h3>Individual dMRI (HCP)</h3>
-      <h4><a href="/hcp_ya.html">Young Adult(n=1065)</a>,<a href="/hcp_a.html">Aging(n=720)</a>,<a href="/hcp_d.html">Developmental(n=636)</a>,<a href="/hcp_d2.html">Developing(Neonate n=724)</a></h4>
-      <h4>Baby HCP (pending)</a></h4>
+      <h4><a href="/hcp_ya.html">Adult(n=1065)</a> <a href="/hcp_a.html">Aging(n=720)</a> <a href="/hcp_d.html">Developmental(n=636)</a> <a href="/hcp_d2.html">Neonate(n=724)</a> Baby(pending)</h4>
       <h3>Individual dMRI (In-Vivo)</h3>
       <h4><a href="/camcan.html">Cam-CAN (n=634)</a></h4>
       <h4><a href="/greesland_twin.html">Queensland Twin Adolescent Brain (QTAB)(n=415)</a></h4>
