--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,18 +24,12 @@
       <h3>Individual dMRI (HCP)</h3>
       <h4><a href="/hcp_ya.html">Adult(n=1065)</a>, <a href="/hcp_a.html">Aging(n=720)</a>, <a href="/hcp_d.html">Developmental(n=636)</a>, <a href="/hcp_d2.html">Neonate(n=724)</a>, Baby(pending)</h4>
       <h3>Individual dMRI (In-Vivo)</h3>
-      <h4><a href="/camcan.html">Cam-CAN (n=634)</a></h4>
-      <h4><a href="/greesland_twin.html">Queensland Twin Adolescent Brain (QTAB)(n=415)</a></h4>
-      <h4><a href="/ntu_dsi.html">NTU (n=90)</a></h4>
-      <h4><a href="/test_retest.html">Test-Retest Data</a></h4>
+      <h4><a href="/camcan.html">Cam-CAN(n=634)</a>, <a href="/greesland_twin.html">(QTAB)(n=415)</a>, <a href="/ntu_dsi.html">NTU(n=90)</a>, <a href="/test_retest.html">Test-Retest</a></h4>
       <h3>Individual dMRI (Ex-Vivo)</h3>
-      <h4><a href="/duke_civm_brainstem.html">Duke Human Brainstem</a></h4>
-      <h4><a href="/mgh_760.html">MGH Single Subject</a></h4>
-      <h4><a href="/histology.html">Human Histology Images</a></h4>
-      <h4><a href="/indi_prime.html">PRIME-DE Nonhuman Primate</a></h4>   
-      <h3><a href="https://dsi-studio.labsolver.org">DSI Studio</a></h3>   
+      <h4><a href="/duke_civm_brainstem.html">Duke_Brainstem</a>, <a href="/mgh_760.html">MGH_Single_Subject</a>, <a href="/histology.html">Histology Images</a>, <a href="/indi_prime.html">PRIME-DE(Nonhuman_Primate)</a></h4>   
       <h3>Individual dMRI (Patient)</h3>
-      <h4><a href="/upenn_gbm.html">UPenn GBM (n=531)</a></h4>
+      <h4><a href="/upenn_gbm.html">UPennGBM(n=531)</a></h4>
+      <h3><a href="https://dsi-studio.labsolver.org">DSI Studio</a></h3>   
       <h3>User Supports</h3>
       <h4><a href="https://groups.google.com/g/dsi-studio?pli=1">Discussion Forum</a></h4>
       <p>Fang-Cheng (Frank) Yeh<br>
